--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 Day 00/ex00/megaphone
 Day 00/ex01/PhoneBook
 Day 00/ex02/account
+
+# Day 01
+Day 01/ex00/pony
+Day 01/ex01/leak
+Day 01/ex02/zombie
+
+Day 01/ex05/brain
+Day 01/ex06/weapon
