--- a/Day 01/ex08/Makefile
+++ b/Day 01/ex08/Makefile
@@ -12,7 +12,7 @@
 
 NAME = human
 CC = clang++
-CFLAGS = #-Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra
 LIST =	Human
 CPP =	$(LIST) \
 		main
