--- a/Day 03/ex01/Makefile
+++ b/Day 03/ex01/Makefile
@@ -10,10 +10,11 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME =	fragTrap
+NAME =	scavTrap
 CC =	clang++
 CFLAGS = -Wall -Werror -Wextra
-LIST =	FragTrap
+LIST =	FragTrap \
+		ScavTrap
 CPP =	$(LIST) \
 		main
 HPP =	$(addsuffix .hpp, $(LIST))
