--- a/Day 03/ex02/Makefile
+++ b/Day 03/ex02/Makefile
@@ -10,10 +10,12 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME =	fragTrap
+NAME =	clapTrap
 CC =	clang++
 CFLAGS = -Wall -Werror -Wextra
-LIST =	FragTrap
+LIST =	FragTrap \
+		ScavTrap \
+		ClapTrap
 CPP =	$(LIST) \
 		main
 HPP =	$(addsuffix .hpp, $(LIST))
