--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ Day 03/ex01/scavTrap
 Day 03/ex02/clapTrap
 Day 03/ex03/ninjaTrap
 Day 03/ex04/superTrap
+
+# Day 04
+Day 04/ex00/sorcerer
+Day 04/ex01/weapon
+Day 04/ex02/squad
