--- a/Day 03/ex02/Makefile
+++ b/Day 03/ex02/Makefile
@@ -12,7 +12,7 @@
 
 NAME =	clapTrap
 CC =	clang++
-CFLAGS = #-Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra
 LIST =	FragTrap \
 		ScavTrap \
 		ClapTrap
