--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,10 @@ Day 04/ex03/materia
 Day 04/ex04/mining
 
 # Day 05
+Day 05/*/*_shrubbery
 Day 05/ex00/bureaucrat
 Day 05/ex01/bureaucrat
+Day 05/ex02/bureaucrat
+Day 05/ex03/bureaucrat
+Day 05/ex04/bureaucrat
+Day 05/ex05/bureaucrat
