--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ Day 05/ex05/bureaucrat
 Day 06/ex00/cast
 Day 06/ex01/serialize
 Day 06/ex02/identify
+
+# Day 07
+Day 07/ex00/identify
+Day 07/ex01/identify
+Day 07/ex02/array
